header + menu spacing fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,9 +1,9 @@
 
 
 t1 {
-    position: relative;
+    position: absolute;
     top: 0px;
-    right: 600px;
+    left: 10px;
 }
 
 ul {
@@ -29,8 +29,9 @@ li:hover{
 }
 
 .bigFont li{
-  font-size:20px;
+    font-size:20px;
   font-weight: bold;
+  padding-top: 80px;
 }
 
 body {
